<resources>
    <string name="app_name">Shapes Quiz App</string>
    <string name="start">Lets Start *Quiz*</string>
    <string name="start_button">Start</string>
    <string name="q1_button">Next To Q1</string>
    <string name="q2_button">Next To Q2</string>
    <string name="Square">Square</string>
    <string name="Circle">Circle</string>
    <string name="Triangle">Triangle</string>
    <string name="Rectangle">Rectangle</string>
    <string name="q3_button">Next To Q3</string>
    <string name="q4_button">Next To Q4</string>
    <string name="q4_ch1">Blue Rectangle</string>
    <string name="q4_ch2">Red Circle</string>
    <string name="q4_ch3">Blue Circle</string>
    <string name="q4_ch4">Red Square</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="result_button">Result</string>
    <string name="name">First,\nWhat is your name?</string>
    <string name="name_hint">Name</string>
    <string name="Q1">Q1: Is this shape a Circle?</string>
    <string name="answer_hint">Yes or No</string>
    <string name="checkA1">No</string>
    <string name="A1">The answer: \"No\"\n</string>
    <string name="Q2">Q2: Which Shapes have 4 sides?</string>
    <string name="A2">The answer: \"Square\" and \"Rectangle\"\n</string>
    <string name="Q3">Q3: How many angles in Pentagon?</string>
    <string name="A3">The answer: 5\n</string>
    <string name="Q4">Q4: What is the complete describe to this shape?</string>
    <string name="A4">The answer: \"Blue Circle\"\n</string>
    <string name="result">Final Result</string>
    <string name="hello">Hello,\t</string>
    <string name="score">This is your score: \t</string>
    <string name="totalScore">\tOut of 4.\n</string>
    <string name="answers">Your Answer Summary:\n</string>
    <string name="correct">Your Answer Correct,\n</string>
    <string name="incorrect">Your Answer Incorrect,\n</string>
    <string name="toastText">Please choose an answer!</string>
    <string name="incomplete">Your Answer Correct but Incomplete,\n</string>
    <string name="noAnswer"> You Need to Answer all the Questions to get Score Try Again,\n </string>
    <string name="end">"\nGood job .. Bye."</string>
</resources>
