<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/rootBackground"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- main LinearLayout -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:background="@color/backgroundColor"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/quizImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:src="@drawable/quiz" />

            <TextView
                android:id="@+id/quizText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/start"
                android:textAlignment="center"
                android:textColor="@color/fontColor"
                android:textSize="36sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <!-- Name  -->
            <ImageView
                android:id="@+id/nameImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:cropToPadding="true"
                android:src="@drawable/name" />

            <TextView
                android:id="@+id/nameText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:padding="6dp"
                android:text="@string/name"
                android:textColor="@color/fontColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/AnswerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/name_hint"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/fontColor"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <!-- Q1  -->
            <TextView
                android:id="@+id/q1Text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:padding="6dp"
                android:text="@string/Q1"
                android:textColor="@color/fontColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/q1Image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:cropToPadding="true"
                android:src="@drawable/oval" />

            <EditText
                android:id="@+id/q1Answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/answer_hint"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/fontColor"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <!-- Q2  -->
            <TextView
                android:id="@+id/q2Text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:padding="6dp"
                android:text="@string/Q2"
                android:textColor="@color/fontColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/q2Image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:cropToPadding="true"
                android:paddingTop="16dp"
                android:src="@drawable/qt" />

            <LinearLayout
                android:id="@+id/q2choose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/q2chose1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:text="@string/Square"
                        android:textColor="@android:color/darker_gray" />

                    <CheckBox
                        android:id="@+id/q2chose2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:text="@string/Triangle"
                        android:textColor="@android:color/darker_gray" />

                    <CheckBox
                        android:id="@+id/q2chose3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:text="@string/Rectangle"
                        android:textColor="@android:color/darker_gray" />

                    <CheckBox
                        android:id="@+id/q2chose4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:text="@string/Circle"
                        android:textColor="@android:color/darker_gray" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <!-- Q3  -->

            <TextView
                android:id="@+id/q3Text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:padding="6dp"
                android:text="@string/Q3"
                android:textColor="@color/fontColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/q3Image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:cropToPadding="true"
                android:paddingTop="16dp"
                android:src="@drawable/pentagon" />

            <RadioGroup
                android:id="@+id/q3choose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/q3ch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="3"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/darker_gray" />

                <RadioButton
                    android:id="@+id/q3ch2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="5"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/darker_gray" />

                <RadioButton
                    android:id="@+id/q3ch3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="4"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/darker_gray" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <!-- Q4  -->
            <TextView
                android:id="@+id/q4Text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:padding="6dp"
                android:text="@string/Q4"
                android:textColor="@color/fontColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/q4Image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:cropToPadding="true"
                android:paddingTop="16dp"
                android:src="@drawable/circle" />

            <RadioGroup
                android:id="@+id/q4choose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/q4chose1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4_ch1"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/darker_gray" />

                <RadioButton
                    android:id="@+id/q4chose2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4_ch2"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/darker_gray" />

                <RadioButton
                    android:id="@+id/q4chose3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4_ch3"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/darker_gray" />

                <RadioButton
                    android:id="@+id/q4chose4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4_ch4"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/darker_gray" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/resultButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:background="@color/Button"
            android:onClick="getResult"
            android:padding="10dp"
            android:text="@string/result_button"
            android:textAllCaps="true"
            android:textColor="@color/ButtonFont"
            android:textSize="20sp" />

        <!-- Result LinearLayout -->
        <LinearLayout
            android:id="@+id/resultLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:background="@color/backgroundColor"
            android:orientation="vertical"
            android:padding="20dp"
            android:visibility="gone">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <ImageView
                android:id="@+id/resultImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:cropToPadding="true"
                android:paddingTop="16dp"
                android:src="@drawable/resulte" />

            <TextView
                android:id="@+id/resultText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:padding="6dp"
                android:text="@string/result"
                android:textColor="@color/fontColor"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/displayText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:padding="6dp"
                android:gravity="center"
                android:text="@string/end"
                android:textColor="@color/resultText"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
